--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Git VSCODE</title>
 </head>
 <body>
-    
+    <!--DIV Conainer 1-->
+    <div class="container">
+        <div class="row">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, ipsum!</p>
+        </div>
+    </div>
 </body>
 </html>
